--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: huntoor # change to your GitHub username
 
 twitter:
-  username: "@Hunt00r" # change to your Twitter username
+  username: "Hunt00r" # change to your Twitter username
 
 social:
   # Change to your full name.
@@ -38,8 +38,8 @@ social:
   email: omarahmed99929@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://x.com/Hunt00r # change to your Twitter homepage
     - https://github.com/huntoor # change to your GitHub homepage
+    - https://x.com/Hunt00r # change to your Twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -95,10 +95,10 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn: "https://chirpy-img.netlify.app"
+#cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.jpg"
+avatar: "./assets/imgs/566206.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
